addons/monitoring/traefik/grafana-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-grafana
  namespace: kubernetes-monitoring
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: kubernetes-monitoring-grafana-prefix@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - host: example.com
    http:
      paths:
      - path: /grafana
        pathType: Prefix
        backend:
          service:
            name: monitoring-grafana
            port:
              number: 80

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: grafana-prefix
  namespace: kubernetes-monitoring
spec:
  stripPrefix:
    prefixes:
      - /grafana
