addons/monitoring/traefik/prometheus-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-prometheus-server
  namespace: kubernetes-monitoring
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: kubernetes-monitoring-server-auth@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - host: example.com
    http:
      paths:
      - path: /prometheus
        pathType: Prefix
        backend:
          service:
            name: monitoring-prometheus-server
            port:
              number: 80

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: server-auth
  namespace: kubernetes-monitoring
spec:
  basicAuth:
    secret: monitoring-prometheus
